API - Refactor to improve coverage - Remove unwanted code - Replace raw validation statements with built-in utils